updated catalina options